# geoharvestai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
agents/: crop_graph.py  state.py
api/: main.py
api/routes/: recommend.py
db/: session.py  settings.py
models/: gis.py  schemas.py
services/: gis_resolver.py
